<resources>
    <string name="app_name">Авиарейсы аэропорта</string>
    <string name="brand_name">Авиарейсы аэропорта</string>
    <string name="welcome_text">Добро пожаловать!</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="login_button">Войти</string>
    <string name="woregister_button">Продолжить без регистрации</string>
    <string name="login_hint">Логин</string>
    <string name="pwd_hint">Пароль</string>
    <string name="pwdagain_hint">Повторите пароль</string>
    <string name="iconsent">Я согласен с условиями пользовательского соглашения</string>
    <string name="registration_label">Регистрация</string>
    <string name="login_label">Вход</string>
    <string name="forgor">Забыли пароль?</string>
    <string name="have_to_consent">Нужно согласиться с правилами</string>
    <string name="passwords_dont_match">Пароли не совпадают</string>
    <string name="all_flights">Все рейсы</string>
    <string name="departures">Вылеты</string>
    <string name="arrivals">Прилёты</string>
    <string name="favorites">Избранное</string>
    <string name="change_profile_data">Изменить</string>
    <string name="log_out_profile">Выйти</string>
    <string name="find_flight">Найти рейс</string>
    <string name="add_flight">Добавить рейс</string>
    <string name="users">Пользователи</string>
    <string name="save_edits">Сохранить</string>
    <string name="departure_airport">Аэропорт отправления</string>
    <string name="arrival_airport">Аэропорт прибытия</string>
    <string name="departure_time">Время вылета</string>
    <string name="arrival_time">Время прибытия</string>
    <string name="price">Цена</string>
    <string name="menu_favs">Избранное</string>
    <string name="menu_profile">Профиль</string>
    <string name="departure_date">Дата вылета</string>
    <string name="arrival_date">Дата прибытия</string>
    <string name="random_flight">Случайный рейс</string>
    <string name="flight_info">%s\n%s</string>
    <string name="data">Введите данные полёта:</string>
    <string name="FIO_format">%s %s %s</string>
    <string name="flight_price">%d ₽</string>
    <string name="profile_label">Профиль</string>
    <string name="users_label">Пользователи</string>
    <string name="find_flight_label">Поиск</string>
    <string name="create_flight_label">Создание рейса</string>
    <string name="edit_flight_label">Редактирование рейса</string>
    <string name="menu_label">Главное меню</string>
    <string name="flight_info_label">Сведения</string>
    <string name="flights_label">Рейсы</string>
</resources>