<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/all"
        android:text="@string/all_flights"
        style="@style/welcome_button"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/find_flight"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.3"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/find_flight"
        android:text="@string/find_flight"
        style="@style/welcome_button"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/all"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/departures"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/departures"
        android:text="@string/departures"
        android:layout_margin="15dp"
        style="@style/welcome_button"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/find_flight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/arrivals"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/arrivals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/welcome_button"

        android:layout_margin="15dp"
        android:text="@string/arrivals"
        app:layout_constraintTop_toBottomOf="@+id/departures"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/favs"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/favs"
        android:text="@string/favorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        style="@style/welcome_button"

        app:layout_constraintTop_toBottomOf="@+id/arrivals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>