<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <Button
        android:id="@+id/all"
        android:text="@string/all_flights"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/find_flight"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.3"/>

    <Button
        android:id="@+id/find_flight"
        android:text="@string/find_flight"
        android:layout_margin="15dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/all"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/add_flight"/>

    <Button
        android:id="@+id/add_flight"
        android:text="@string/add_flight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@+id/find_flight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/users"
        />

    <Button
        android:id="@+id/users"
        android:text="@string/users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"

        app:layout_constraintTop_toBottomOf="@+id/add_flight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>