<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindFlightActivity"
    android:padding="15dp">

    <EditText
        android:id="@+id/departure_airport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/arrival_airport"
        app:layout_constraintBottom_toTopOf="@+id/departure_time"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.2"
        android:inputType="text"
        android:hint="@string/departure_airport"
        />

    <EditText
        android:id="@+id/arrival_airport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="@id/departure_airport"
        app:layout_constraintStart_toEndOf="@id/departure_airport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/departure_airport"
        android:inputType="text"
        android:hint="@string/arrival_airport"
        />

    <EditText
        android:id="@+id/departure_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/departure_airport"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/arrival_time"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="date"
        android:hint="@string/departure_time"
        />
    <EditText
        android:id="@+id/arrival_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/departure_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/price"
        android:inputType="date"
        android:hint="@string/arrival_time"
        />
    <com.google.android.material.slider.RangeSlider
        android:id="@+id/price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/arrival_time"
        app:layout_constraintStart_toStartOf="@id/arrival_time"
        app:layout_constraintEnd_toEndOf="@id/arrival_time"
        app:layout_constraintBottom_toBottomOf="parent"

        />

    <Button
        android:id="@+id/save"
        android:text="@string/find_flight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.9"/>

</androidx.constraintlayout.widget.ConstraintLayout>