<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindFlightActivity"
    android:padding="10dp">

    <TextView
        android:id="@+id/data"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:text="@string/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/departure_airport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@+id/data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/arrival_airport"
        app:layout_constraintBottom_toTopOf="@+id/departure_time"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0"
        android:inputType="text"
        android:hint="@string/departure_airport"
        />

    <EditText
        android:id="@+id/arrival_airport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="@id/departure_airport"
        app:layout_constraintStart_toEndOf="@id/departure_airport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/departure_airport"
        android:inputType="text"
        android:hint="@string/arrival_airport"
        />



    <EditText
        android:id="@+id/departure_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/departure_airport"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dep_time_btn"
        app:layout_constraintBottom_toTopOf="@+id/arrival_time"
        android:hint="@string/departure_time"
        android:inputType="datetime"
        />
    <Button
        android:id="@+id/dep_time_btn"
        android:layout_width="35dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/departure_time"
        app:layout_constraintBottom_toBottomOf="@+id/departure_time"
        app:layout_constraintStart_toEndOf="@id/departure_time"
        app:layout_constraintEnd_toEndOf="@+id/departure_airport"
        />
    <EditText
        android:id="@+id/departure_date"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/departure_time"
        app:layout_constraintBottom_toBottomOf="@id/departure_time"
        app:layout_constraintStart_toStartOf="@+id/arrival_airport"
        app:layout_constraintEnd_toStartOf="@+id/dep_date_btn"
        android:hint="@string/departure_date"
        android:inputType="date"
        />
    <Button
        android:id="@+id/dep_date_btn"
        android:layout_width="35dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/departure_time"
        app:layout_constraintBottom_toBottomOf="@+id/departure_time"
        app:layout_constraintStart_toEndOf="@id/departure_date"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/arrival_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/departure_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/arr_time_btn"
        app:layout_constraintBottom_toTopOf="@+id/price_"
        android:hint="@string/arrival_time"
        android:inputType="datetime"
        />
    <Button
        android:id="@+id/arr_time_btn"
        android:layout_width="35dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/arrival_time"
        app:layout_constraintBottom_toBottomOf="@id/arrival_time"
        app:layout_constraintStart_toEndOf="@+id/arrival_time"
        app:layout_constraintEnd_toEndOf="@+id/dep_time_btn"
        />

    <EditText
        android:id="@+id/arrival_date"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/arrival_time"
        app:layout_constraintBottom_toBottomOf="@id/arrival_time"
        app:layout_constraintStart_toStartOf="@+id/departure_date"
        app:layout_constraintEnd_toStartOf="@id/arr_date_btn"
        android:hint="@string/arrival_date"
        android:inputType="date"
        />
    <Button
        android:id="@+id/arr_date_btn"
        android:layout_width="35dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/arrival_time"
        app:layout_constraintBottom_toBottomOf="@id/arrival_time"
        app:layout_constraintStart_toEndOf="@id/arrival_date"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/price_"
        android:text="@string/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/arrival_time"
        app:layout_constraintStart_toStartOf="@id/price"
        app:layout_constraintBottom_toTopOf="@+id/price"
        app:layout_constraintEnd_toEndOf="@id/price"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginTop="10dp"
        android:textSize="20sp"/>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/price_"
        app:layout_constraintStart_toStartOf="@id/arrival_time"
        app:layout_constraintEnd_toEndOf="@id/arr_date_btn"
        app:layout_constraintBottom_toBottomOf="@id/save"
        />


    <Button
        android:id="@+id/save"
        android:text="@string/find_flight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>