<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <TextView
        android:id="@+id/brand_name"
        android:text="@string/brand_name"
        android:gravity="center"

        android:fontFamily="@font/inter_semibold"
        android:textSize="60sp"
        android:textColor="@color/black"


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/welcome"/>
    <TextView
        android:id="@+id/welcome"
        android:text="@string/welcome_text"
        android:gravity="center"
        android:fontFamily="@font/inter_bold"
        android:textSize="30sp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/brand_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"/>

    <View
        android:id="@+id/guideline2"
        android:layout_width="match_parent"
        android:layout_height="1px"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        />

    <View
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="1px"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.6"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register"
        android:text="@string/register_button"
        style="@style/welcome_button"

        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:text="@string/login_button"
        style="@style/welcome_button"

        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/woregister"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/woregister"
        android:text="@string/woregister_button"
        style="@style/welcome_button"
        android:visibility="invisible"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

</androidx.constraintlayout.widget.ConstraintLayout>