<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateFlightActivity"
    android:padding="15dp">

    <EditText
        android:id="@+id/departure_airport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/arrival_airport"
        app:layout_constraintBottom_toTopOf="@+id/departure_time"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.2"
        android:inputType="text"
        android:hint="@string/departure_airport"
        />

    <EditText
        android:id="@+id/arrival_airport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="@id/departure_airport"
        app:layout_constraintStart_toEndOf="@id/departure_airport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/departure_airport"
        android:inputType="text"
        android:hint="@string/arrival_airport"
        />



<!--    <EditText-->
<!--        android:id="@+id/departure_time"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="10dp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/departure_airport"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/arrival_time"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:inputType="date"-->
<!--        android:hint="@string/departure_time"-->
<!--        />-->

    <EditText
        android:id="@+id/departure_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/departure_airport"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dep_time_btn"
        app:layout_constraintBottom_toTopOf="@+id/arrival_time"
        android:hint="@string/departure_time"
        android:inputType="datetime"
        />
    <Button
        android:id="@+id/dep_time_btn"
        android:layout_width="35dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/departure_time"
        app:layout_constraintBottom_toBottomOf="@+id/departure_time"
        app:layout_constraintStart_toEndOf="@id/departure_time"
        app:layout_constraintEnd_toEndOf="@+id/departure_airport"
        />
    <EditText
        android:id="@+id/departure_date"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/departure_time"
        app:layout_constraintBottom_toBottomOf="@id/departure_time"
        app:layout_constraintStart_toStartOf="@+id/arrival_airport"
        app:layout_constraintEnd_toStartOf="@+id/dep_date_btn"
        android:hint="@string/departure_date"
        android:inputType="date"
        />
    <Button
        android:id="@+id/dep_date_btn"
        android:layout_width="35dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/departure_time"
        app:layout_constraintBottom_toBottomOf="@+id/departure_time"
        app:layout_constraintStart_toEndOf="@id/departure_date"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/arrival_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/departure_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/arr_time_btn"
        app:layout_constraintBottom_toTopOf="@+id/price"
        android:hint="@string/arrival_time"
        android:inputType="datetime"
        />
    <Button
        android:id="@+id/arr_time_btn"
        android:layout_width="35dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/arrival_time"
        app:layout_constraintBottom_toBottomOf="@id/arrival_time"
        app:layout_constraintStart_toEndOf="@+id/arrival_time"
        app:layout_constraintEnd_toEndOf="@+id/dep_time_btn"
        />

    <EditText
        android:id="@+id/arrival_date"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/arrival_time"
        app:layout_constraintBottom_toBottomOf="@id/arrival_time"
        app:layout_constraintStart_toStartOf="@+id/departure_date"
        app:layout_constraintEnd_toStartOf="@id/arr_date_btn"
        android:hint="@string/arrival_date"
        android:inputType="date"
        />
    <Button
        android:id="@+id/arr_date_btn"
        android:layout_width="35dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/arrival_time"
        app:layout_constraintBottom_toBottomOf="@id/arrival_time"
        app:layout_constraintStart_toEndOf="@id/arrival_date"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/arrival_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/price"
        android:inputType="number"/>



<!--    <EditText-->
<!--        android:id="@+id/arrival_time"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="10dp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/departure_time"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintBottom_toTopOf="@id/price"-->
<!--        android:inputType="date"-->
<!--        android:hint="@string/arrival_time"-->
<!--        />-->
<!--    <EditText-->
<!--        android:id="@+id/price"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="10dp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/arrival_time"-->
<!--        app:layout_constraintStart_toStartOf="@id/arrival_time"-->
<!--        app:layout_constraintEnd_toEndOf="@id/arrival_time"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        android:inputType="number"-->
<!--        android:hint="@string/price"-->
<!--        />-->

    <Button
        android:id="@+id/save"
        android:text="@string/save_edits"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.9"/>

</androidx.constraintlayout.widget.ConstraintLayout>